--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Malatya</title>
     <style>
-      * {
+      html,
+      body {
         background-color: #fe7a36;
       }
       #head {
@@ -91,18 +92,12 @@
 
   <body>
     <div id="head" style="background-color: #3652ad">
-      <div class="logo" style="background-color: #3652ad">
-        <img
-          src="apricot11.png"
-          alt="kayisi logosu"
-          style="background-color: #3652ad"
-        />
+      <div class="logo">
+        <img src="apricot11.png" alt="kayisi logosu" />
       </div>
-      <div class="malatya_text" style="background-color: #3652ad">
-        <a
-          href="index.html"
-          style="text-decoration: none; background-color: #3652ad"
-          ><h1 style="font-size: 40px; color: white; background-color: #3652ad">
+      <div class="malatya_text">
+        <a href="index.html" style="text-decoration: none"
+          ><h1 style="font-size: 40px; color: white">
             Malatya Büyükşehİr Beledİyesİ
           </h1></a
         >
