--- a/public/tarih.html
+++ b/public/tarih.html
@@ -99,7 +99,7 @@
             alt=""
           />
         </div>
-        <div class="text_eti">
+        <div class="text_eti" style="padding-left: 10px;">
           <h1 style="color: #fe7a36">Etimoloji</h1>
           <p>
             Malatya'nın adı Kültepe tabletlerinde Melita olarak, Hitit
